httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: showcase-route
  namespace: showcase
spec:
  parentRefs:
  - name: main-gateway
    namespace: default
  hostnames:
  - "showcase.khalilaliouich.com"
  - "khalilaliouich.com"
  - "www.khalilaliouich.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: showcase-website
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-route
  namespace: tamagotchi
spec:
  parentRefs:
  - name: main-gateway
    namespace: default
  hostnames:
  - "demo.khalilaliouich.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: tamagotchi-frontend
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: main-gateway
    namespace: default
  hostnames:
  - "argocd.khalilaliouich.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
  - name: main-gateway
    namespace: default
  hostnames:
  - "grafana.khalilaliouich.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-grafana
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  parentRefs:
  - name: main-gateway
    namespace: default
  hostnames:
  - "prometheus.khalilaliouich.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-kube-prome-prometheus
      port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea-route
  namespace: gitea
spec:
  parentRefs:
  - name: main-gateway
    namespace: default
  hostnames:
  - "git.khalilaliouich.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: gitea-http
      port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarqube-route
  namespace: sonarqube
spec:
  parentRefs:
  - name: main-gateway
    namespace: default
  hostnames:
  - "sonar.khalilaliouich.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: sonarqube-sonarqube
      port: 9000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkerd-route
  namespace: linkerd-viz
spec:
  parentRefs:
  - name: main-gateway
    namespace: default
  hostnames:
  - "linkerd.khalilaliouich.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: URLRewrite
      urlRewrite:
        hostname: web.linkerd-viz.svc.cluster.local
    backendRefs:
    - name: web
      port: 8084
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-route
  namespace: showcase
spec:
  parentRefs:
  - name: main-gateway
    namespace: default
  hostnames:
  - "n8n.khalilaliouich.com"
  rules:
  - backendRefs:
    - name: n8n
      port: 80
